SUBDIRS = gfx fonts schemas levels sound soundsets gfx16 gfx32 gfx40 gfx48 

pkgdata_DATA = \
	enigma_conf.lua \
	models.lua \
	models-2d.lua \
	models-oxyd.lua \
	models-editor.lua \
	models-16.lua \
	models-32.lua \
	models-40.lua \
	models-48.lua \
	init.lua \
	startup.lua \
	sound-defaults.lua \
	compat.lua \
	security.lua \
	ratings.xml

EXTRA_DIST = $(pkgdata_DATA)
