SUBDIRS = manual refman


docdir=@datadir@/doc/enigma/reference
doc_DATA = functions.html functions.css ant_lua.txt CREATING-LEVELS sounds.txt objects.txt sound.lua\
	demo_i18n.xml demo_simple.xml lua2xml xml2lua

EXTRA_DIST = enigma.6 HACKING TODO README.mingw32 REQUIREMENTS $(doc_DATA)

man_MANS = enigma.6
