SUBDIRS = images manual reference

man_MANS = enigma.6

indexdir=@docdir@
index_DATA = index.html

docdir = @docdir@
doc_DATA = gpl.txt lgpl.txt

EXTRA_DIST = gpl.txt lgpl.txt enigma.6 HACKING README.mingw32 REQUIREMENTS README.macosx\
	doxygen.config $(index_DATA)

doxygen:
	doxygen doxygen.config


